# obs-studio

CI/: full-build-macos.sh
CI/scripts/macos/: Brewfile.lock.json
UI/: window-basic-main-outputs.cpp  window-basic-settings-stream.cpp  window-basic-settings.hpp
cmake/Modules/: FindLibMediasoupClient.cmake  FindLibWebRTC.cmake
plugins/obs-outputs/: AudioDeviceModuleWrapper.cpp  AudioDeviceModuleWrapper.h  Broadcaster.cpp  Broadcaster.h  CMakeLists.txt  MediaStreamTrackFactory.cpp  MediaStreamTrackFactory.h  MediasoupVideoEncoderFactory.cpp  MediasoupVideoEncoderFactory.h  SimulcastMediasoupVideoEncoderFactory.cpp  SimulcastMediasoupVideoEncoderFactory.h  WebRTCStream.cpp  WebRTCStream.h  mediasoup-encoder.cpp  mediasoup-encoder.h  mediasoup-stream.cpp  mediasoup-stream.h  obs-outputs.c
plugins/obs-outputs/libmediasoupclient/: CMakeLists.txt  cmake_install.cmake
plugins/obs-outputs/libmediasoupclient/libsdptransform/: cmake_install.cmake
plugins/obs-outputs/libmediasoupclient/libsdptransform/readme-helper/: cmake_install.cmake  sdptransform_readme_helper
plugins/obs-outputs/libmediasoupclient/libsdptransform/test/: cmake_install.cmake  test_sdptransform
plugins/obs-outputs/libmediasoupclient/test/: CMakeLists.txt  cmake_install.cmake
plugins/obs-outputs/libmediasoupclient/test/libwebrtc/: cmake_install.cmake
plugins/obs-outputs/libwebrtc/: CMakeLists.txt
plugins/rtmp-services/: webrtc-mediasoup.c
